test/code/test_not_error.out

Parse error: parse error in {{CWD}}/test/code/test_not_error.php on line 2
