test/code/test_not_error.php
<? $a = false; ?>
<?= (!$a) ? 1 ?>
